--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # ← メイン開発ブランチ名に合わせて変更
+      - master  # ← メイン開発ブランチ名に合わせて変更
 
 jobs:
   build-and-deploy:
